# gomoku

./: .gitignore  gitalias.txt  main.py  policy_net_simplest_pg.pth  policy_net_vpg.pth  policy_net_vpg_maxent.pth  pyproject.toml  requirements.txt  train.py  value_net_vpg.pth
.clinerules/: gomoku-rl-project.md
examples/: torchrl_example.py  torchrl_example_1.py  torchrl_example_2.py  torchrl_example_3.py  torchrl_example_4.py  torchrl_example_5.py  torchrl_example_6.py
gomoku/: __init__.py  gomoku_env.py  gomoku_net.py  gomoku_play.py  gym_registration.py  mcts.py  mcts_train_flow.py  simplest_pg_train_flow.py  train.py  train_utils.py  vpg_train_flow.py
gomoku/actors/: __init__.py  ai_actor.py  random_actor.py
gomoku/rl/: __init__.py  algorithm.py  framework.py
tests/: test_gomoku_rl.py  test_mcts_training.py
